# halo2_gadgets

./: .gitignore  Cargo.toml  LICENSE-BOSL
dev/bench/: data.js
src/: circuit_description  lib.rs
src/circuit/gadget/ecc/: chip.rs
src/circuit/gadget/ecc/chip/: mul.rs  mul_fixed.rs
